--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,6 +5,8 @@
     <title>My first webpage</title>
   </head>
   <body>
+    <h1>My first webpage</h1>
+    <h2>Written by a little guidance from Moringa school.</h2>
     <p>Hello world!
     Welcome to my webpage!</p>
   </body>
