add a paragragh and a list

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -9,5 +9,12 @@
     <h2>Written by a little guidance from Moringa school.</h2>
     <p>Hello world!
     Welcome to my webpage!</p>
+    <p>Here are things we are going to learn about coding:</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Java script</li>
+      <li>much more!</li>
+    </ul>
   </body>
 </html>
