--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -15,6 +15,7 @@
       <li>CSS</li>
       <li>Java script</li>
       <li>much more!</li>
+      <p>Check out <a href="https://moringaschool.com/">Moringa School.</a>It's a good place to learn web development skills.</p>
       <img src="http://d2ouvy59p0dg6k.cloudfront.net/img/108954_374154.jpg" alt="">
     </ul>
   </body>
