add another paragraph

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -15,8 +15,9 @@
       <li>CSS</li>
       <li>Java script</li>
       <li>much more!</li>
-      <p>Check out <a href="https://moringaschool.com/">Moringa School.</a>It's a good place to learn web development skills.</p>
-      <img src="http://d2ouvy59p0dg6k.cloudfront.net/img/108954_374154.jpg" alt="">
+    <p>Check out <a href="https://moringaschool.com/">Moringa School.</a>It's a good place to learn web development skills.</p>
+    <p>Here is the link to <a href="file:///home/algorithm/Desktop/my-first-website/my-favourite-website/my-favourite-things.html">my favourite tings .</a></p>
+    <img src="http://d2ouvy59p0dg6k.cloudfront.net/img/108954_374154.jpg" alt="">
     </ul>
   </body>
 </html>
